works with personal app def with secrets

--- a/web-api/appsettings.json
+++ b/web-api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "Enter the tenant ID obtained from the Microsoft Entra admin center",
-    "ClientId": "Enter the client ID obtained from the Microsoft Entra admin center",
+    "TenantId": "6420391c-665b-4ed8-9027-bac404bf4aa5",
+    "ClientId": "532a3c51-9280-4c71-a886-a6c7515e37c0",
     "Scopes": "Forecast.Read"
   },
   "Logging": {
